CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
IF(COMMAND cmake_policy)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND cmake_policy)

PROJECT(FacebookGrapher)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)

IF(UNIX)
    FIND_PACKAGE(OpenGL REQUIRED)
    FIND_PACKAGE(PythonLibs REQUIRED)
    FIND_PACKAGE(SDL REQUIRED)
    FIND_PACKAGE(SDL_image REQUIRED)
    set(CMAKE_CXX_FLAGS "-g -Wall -Wno-reorder")
ENDIF()

IF(WIN32)
    INCLUDE_DIRECTORIES(Contrib/Windows)
    LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/Contrib/Windows/lib)
ENDIF()

INCLUDE_DIRECTORIES(src)

SET(FACEBOOK_GRAPHER_DEPENDENCIES SDL SDL_image GL GLU GLEW)

IF(WIN32)
    ADD_DEFINITIONS(/D NOGDI /D NOMINMAX)
ENDIF()

file(GLOB_RECURSE FACEBOOK_GRAPHER_SOURCES src/*.cpp)
LIST(REMOVE_ITEM FACEBOOK_GRAPHER_SOURCES FACEBOOK_GRAPHER/main.cpp)
ADD_LIBRARY(facebook_grapher_lib ${FACEBOOK_GRAPHER_SOURCES})
TARGET_LINK_LIBRARIES(facebook_grapher_lib ${FACEBOOK_GRAPHER_DEPENDENCIES})

ADD_EXECUTABLE(facebook-grapher src/main.cpp)
TARGET_LINK_LIBRARIES(facebook-grapher facebook_grapher_lib ${FACEBOOK_GRAPHER_DEPENDENCIES})
ADD_DEPENDENCIES(facebook-grapher facebook_grapher_lib)
